# taariqnazar.github.io

./: cv.yaml  index.html  package-lock.json  package.json
scripts/: llm.py  main.py  pyproject.toml
src/: App.vue  main.js  router.js  style.css
src/articles/: first_article.md
src/components/: NavBar.vue  Publication.vue
src/composables/: useCV.ts
src/pages/: Articles.vue  CV.vue  Home.vue  Research.vue
src/types/: cv.ts
